# Block-Pose-Estimation

./: .gitignore  README.md  ros_run.sh  run.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/matching_algorithm/: Data1d.h  Data2d.h
devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
devel/lib/ObjectPose/: ObjectPose
devel/lib/matching_algorithm/: matching_algorithm
devel/lib/pkgconfig/: ObjectPose.pc  matching_algorithm.pc  realsense2_camera.pc  realsense2_description.pc
output_cloud/: blue.pcd  brown.pcd  orange.pcd  purple.pcd  red.pcd  yellow.pcd
settings/: Settings_RIT_indoor1.yaml  Settings_RIT_indoor2.yaml
src/ObjectPose/: CMakeLists.txt  package.xml
src/ObjectPose/include/: DominantPlane.h  ObjectPose.h
src/ObjectPose/src/: DominantPlane.cc  ObjectPose.cc  main.cc
src/block_pose/: CMakeLists.txt  package.xml
src/block_pose/blocks/: blue.pcd  brown.pcd  green.pcd  orange.pcd  purple.pcd  red.pcd  yellow.pcd
src/block_pose/include/: ObjectPose.h  SystemHandler.h
src/block_pose/msg/: BrownBlock.msg  OrangeBlock.msg  RedBlock.msg
src/block_pose/src/: DominantPlane.cc  ObjectPose.cc  main.cc
src/matching_algorithm/: CMakeLists.txt  matching_algorithm.cpp  matching_algorithm.h  package.xml
src/matching_algorithm/blocks/: blue.pcd  brown.pcd  green.pcd  orange.pcd  purple.pcd  red.pcd  yellow.pcd
src/matching_algorithm/msg/: Data2d.msg
src/voxel_grid/: CMakeLists.txt  package.xml
src/voxel_grid/msg/: voxel_grid.msg
src/voxel_grid/src/: DominantPlane.cpp  DominantPlane.h  config.h  (+7 more)
(+18 files in other folders)
